--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -1,6 +1,10 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <color name="colorPrimary">#008577</color>
-    <color name="colorPrimaryDark">#00574B</color>
-    <color name="colorAccent">#D81B60</color>
+    <color name="colorPrimary">#5e35b1</color>
+    <color name="colorPrimaryDark">#280680</color>
+    <color name="colorPrimaryLight">#9162e4</color>
+
+    <color name="colorSecondary">#FF5722</color>
+    <color name="colorSecondaryDark">#c41c00</color>
+    <color name="colorSecondaryLight">#ff8a50</color>z
 </resources>
