--- a/app/src/main/res/menu/activity_main_drawer.xml
+++ b/app/src/main/res/menu/activity_main_drawer.xml
@@ -4,12 +4,30 @@
       tools:showIn="navigation_view"
 >
 
-    <group android:checkableBehavior="single">
-        <item
-                android:id="@+id/departureFragment"
-                android:icon="@android:drawable/ic_input_add"
-                android:title="Odjazdy"/>
-    </group>
+
+    <item android:title="Konto">
+        <menu>
+            <group android:checkableBehavior="single">
+                <item
+                        android:id="@+id/nav_camera"
+                        android:icon="@drawable/ic_visibility_24px"
+                        android:title="Obserwowane" />
+                <item
+                        android:id="@+id/nav_message"
+                        android:icon="@drawable/ic_message_24px"
+                        android:title="wiadmości" />
+                <item
+                        android:id="@+id/nav_add"
+                        android:icon="@drawable/ic_playlist_add_24px"
+                        android:title="Dodaj Produkt" />
+                <item
+                        android:id="@+id/nav_myProduct"
+                        android:icon="@drawable/ic_import_contacts_24px"
+                        android:title="Wystawione" />
+            </group>
+        </menu>
+    </item>
+
 
 
 </menu>
