--- a/app/src/main/res/layout/fragment_offert_list.xml
+++ b/app/src/main/res/layout/fragment_offert_list.xml
@@ -9,25 +9,86 @@
             android:layout_height="match_parent"
             tools:context=".OfferList" android:id="@+id/frameLayout">
 
+        <LinearLayout
+                android:orientation="vertical"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="8dp"
+                app:layout_constraintTop_toTopOf="parent" android:id="@+id/linearLayout_serch"
+                app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="8dp"
+                app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp">
+            <LinearLayout
+                    android:orientation="horizontal"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content">
+                <com.google.android.material.textfield.TextInputLayout
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:hint="woj" android:layout_weight="1" android:layout_margin="12dp">
+
+                    <com.google.android.material.textfield.TextInputEditText
+                            android:layout_width="match_parent"
+                            android:layout_height="wrap_content"/>
+
+                </com.google.android.material.textfield.TextInputLayout>
+                <com.google.android.material.textfield.TextInputLayout
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:hint="miasto" android:layout_weight="1" android:layout_margin="12dp">
+
+                    <com.google.android.material.textfield.TextInputEditText
+                            android:layout_width="match_parent"
+                            android:layout_height="wrap_content"/>
+
+                </com.google.android.material.textfield.TextInputLayout>
+            </LinearLayout>
+            <LinearLayout
+                    android:orientation="horizontal"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content">
+                <com.google.android.material.textfield.TextInputLayout
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:hint="Ulica" android:layout_weight="1"
+                        android:layout_marginTop="0dp" android:layout_marginLeft="12dp"
+                        android:layout_marginRight="12dp">
+
+                    <com.google.android.material.textfield.TextInputEditText
+                            android:layout_width="match_parent"
+                            android:layout_height="match_parent"/>
+
+                </com.google.android.material.textfield.TextInputLayout>
+
+                <com.google.android.material.button.MaterialButton
+                        android:id="@+id/material_unelevated_button"
+                        style="@style/Widget.MaterialComponents.Button.UnelevatedButton"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:text="Szukaj" android:layout_weight="1"
+                        android:layout_marginTop="0dp" android:layout_marginLeft="12dp"
+                        android:layout_marginRight="12dp"/>
+            </LinearLayout>
+        </LinearLayout>
+
 
         <TextView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:text="Brak wyników"
                 android:id="@+id/textView_whenEmpty" app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintTop_toTopOf="parent" app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintBottom_toBottomOf="parent" android:textSize="@dimen/centralInfoTextSize"/>
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintBottom_toBottomOf="parent" android:textSize="@dimen/centralInfoTextSize"
+                android:layout_marginTop="8dp" app:layout_constraintTop_toBottomOf="@+id/linearLayout_serch"/>
 
         <androidx.recyclerview.widget.RecyclerView
                 android:layout_width="0dp"
                 android:layout_height="0dp"
                 app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                 app:layout_constraintBottom_toBottomOf="parent"
-                app:layout_constraintTop_toTopOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
                 android:id="@+id/recycle_departure"
                 app:layout_constraintEnd_toEndOf="parent"
-        />
+                android:layout_marginTop="8dp" app:layout_constraintTop_toBottomOf="@+id/linearLayout_serch"/>
 
     </androidx.constraintlayout.widget.ConstraintLayout>
 </layout>
