--- a/app/src/main/res/layout/list_item_offer.xml
+++ b/app/src/main/res/layout/list_item_offer.xml
@@ -7,7 +7,7 @@
     <LinearLayout
             android:orientation="vertical"
             android:layout_width="match_parent"
-            android:layout_height="match_parent">
+            android:layout_height="wrap_content">
 
         <androidx.cardview.widget.CardView
                 android:layout_width="match_parent"
@@ -18,6 +18,7 @@
                     android:layout_width="match_parent"
                     android:layout_height="match_parent">
                 <ImageView
+
                         android:layout_width="120dp"
                         android:layout_height="120dp" tools:srcCompat="@tools:sample/avatars"
                         android:id="@+id/imageView"/>
@@ -36,9 +37,10 @@
                             android:layout_width="match_parent"
                             android:layout_height="match_parent" android:gravity="bottom|right">
                         <TextView
-                                android:text=""
+                                android:text='@{ValueParser.parseIntValueToString(offer.price)+"zł"}'
                                 android:layout_width="wrap_content"
-                                android:layout_height="wrap_content" android:id="@+id/textView_price"/>
+                                android:layout_height="wrap_content" android:id="@+id/textView_price"
+                                android:textSize="@dimen/priceTextSize"/>
                     </LinearLayout>
                 </LinearLayout>
             </LinearLayout>
