--- a/app/src/main/res/menu/activity_main_drawer.xml
+++ b/app/src/main/res/menu/activity_main_drawer.xml
@@ -4,7 +4,10 @@
       tools:showIn="navigation_view"
 >
 
-
+    <item
+            android:id="@+id/offertList"
+            android:icon="@drawable/ic_shopping_cart_24px"
+            android:title="Oferty" />
     <item android:title="Konto">
         <menu>
             <group android:checkableBehavior="single">
@@ -17,7 +20,7 @@
                         android:icon="@drawable/ic_message_24px"
                         android:title="wiadmości" />
                 <item
-                        android:id="@+id/nav_add"
+                        android:id="@+id/addProductFragment"
                         android:icon="@drawable/ic_playlist_add_24px"
                         android:title="Dodaj Produkt" />
                 <item
