--- a/app/src/main/res/navigation/nav_graph.xml
+++ b/app/src/main/res/navigation/nav_graph.xml
@@ -5,5 +5,11 @@
             app:startDestination="@id/offertList">
 
     <fragment android:id="@+id/offertList" android:name="com.example.artificumlocus.OfferList"
-              android:label="Oferty" tools:layout="@layout/fragment_offert_list"/>
+              android:label="Oferty" tools:layout="@layout/fragment_offert_list">
+        <action android:id="@+id/action_offertList_to_addProductFragment" app:destination="@id/addProductFragment"/>
+    </fragment>
+    <fragment android:id="@+id/addProductFragment" android:name="com.example.artificumlocus.views.AddProductFragment"
+              android:label="AddProductFragment">
+        <action android:id="@+id/action_addProductFragment_to_offertList" app:destination="@id/offertList"/>
+    </fragment>
 </navigation>
