--- a/app/src/main/res/navigation/nav_graph.xml
+++ b/app/src/main/res/navigation/nav_graph.xml
@@ -7,9 +7,16 @@
     <fragment android:id="@+id/offertList" android:name="com.example.artificumlocus.OfferList"
               android:label="Oferty" tools:layout="@layout/fragment_offert_list">
         <action android:id="@+id/action_offertList_to_addProductFragment" app:destination="@id/addProductFragment"/>
+        <action android:id="@+id/action_offertList_to_detailedOfferFragment"
+                app:destination="@id/detailedOfferFragment"/>
     </fragment>
     <fragment android:id="@+id/addProductFragment" android:name="com.example.artificumlocus.views.AddProductFragment"
-              android:label="AddProductFragment">
+              android:label="Dodaj Produkt">
         <action android:id="@+id/action_addProductFragment_to_offertList" app:destination="@id/offertList"/>
+    </fragment>
+    <fragment android:id="@+id/detailedOfferFragment"
+              android:name="com.example.artificumlocus.views.DetailedOfferFragment"
+              android:label="Ingormacje">
+        <argument android:name="offertId" app:argType="integer"/>
     </fragment>
 </navigation>
