--- a/app/src/main/res/navigation/nav_graph.xml
+++ b/app/src/main/res/navigation/nav_graph.xml
@@ -37,4 +37,6 @@
               android:label="ObservedOfferFragment"/>
     <fragment android:id="@+id/mySalesFragment" android:name="com.example.artificumlocus.views.MySalesFragment"
               android:label="MySalesFragment"/><action android:id="@+id/action_global_detailedOfferFragment" app:destination="@id/detailedOfferFragment"/>
+    <activity android:id="@+id/searchActivity" android:name="com.example.artificumlocus.views.SearchActivity"
+              android:label="SearchActivity"/>
 </navigation>
